fix extra space in tile

--- a/public/main.css
+++ b/public/main.css
@@ -219,7 +219,6 @@ main {
   aspect-ratio: 1/1;
   border: 2px solid var(--color-border);
   border-radius: 50%;
-  padding-bottom: 0.2em;
   font-size: 0.5rem;
   line-height: 1;
   background: var(--color-empty);
